# aoc24

./: .gitignore  README.md  aoc24  aoc24.opam  dune-project
lib/: dune
lib/days/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  dune  types.ml
lib/inputs/: dune
lib/runner/: dune  run.ml  runner.ml  util.ml
