(lang dune 3.16)

(name aoc24)

(generate_opam_files true)

(source
 (github devashish-sood/aoc24))

(authors "Devashish Sood")

(maintainers "Devashish Sood")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc24)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
